<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DreamFly</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="get_more">获取更多</string>
    <string name="release_to_refresh">松开刷新</string>
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="refreshing">正在刷新&#8230;</string>
    <string name="updating">最近更新：</string>
    
    <string name="act_regist">填写注册信息</string>
    <string name="act_login">PC报修系统</string>
    
    <string name="btn_baoxiu">提交报修单</string>
    <string name="btn_login">登录</string>
    <string name="btn_regist">注册</string>
	
    <string name="msg_title">通知</string>
    <string name="user">用户名：</string>
    <string name="user_login">用户登录</string>
    <string name="password">密码：</string>
    <string name="realname">真实姓名:</string>
    <string name="sex">性别：</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="area">区域：</string>
    <string name="dorm">宿舍号：</string>
    <string name="email">E-mail：</string>
    <string name="phone">电话：</string>
    <string name="pcnumber">pc号码:</string>
    <string name="reinfo">修改个人资料</string>
    <string name="submit_info">提交修改</string>
    <string name="goback">返回</string>
    <string name="space">&#160; &#160; &#160; &#160; </string>
    <string name="comtype">电脑类型:</string>
    <string name="faultdesc">故障描述:</string>
    <string name="booktime">预约时间:</string>
    
    <string name="hint_user">用户名由数字与字母组成</string>
    <string name="hint_password">请输入密码</string>
    <string name="hint_realname">如：张三</string>
	<string name="hint_sex">如：男</string>
	<string name="hint_dorm_title">宿舍楼</string>
	<string name="hint_area">如：北区</string>
	<string name="hint_middle">栋  &#8211;</string>
	<string name="hint_dorm">如：602</string>
	<string name="hint_phone">如：13710261413</string>
	<string name="hint_email">如：peizheng@pz.com</string>
	<string name="hint_comtype">笔记本/台式/苹果</string>
	<string name="comtype_title">电脑类型</string>
	<string name="hint_faultdesc">如：开机进不了系统</string>
	<string name="hint_booktime">如：明天晚上8点之后</string>
	<string name="hint_cancellist">请说下为什么取消报修，有助于我们改进服务</string>
	<string name="hint_comment">您对本次修机有什么看法？期待你的回复</string>
	<string name="hint_giveup">请您说下放弃该维修单的原因</string>
	
	<string name="userinfo">个人资料</string>
	<string name="uploadlist">提交报修</string>
	<string name="listview">报修单</string>
	
	<string name="listinfo">报修单详细信息</string>
	<string name="fixfinish">完成维修</string>
	<string name="listid">维修单号:</string>
	<string name="type">类型:</string>
	<string name="time">报修时间:</string>
	<string name="state">状态:</string>
	<string name="reviewlevel">评价等级:</string>
	<string name="remark">备注:</string>
	<string name="fixaccept">受理报修单</string>
	<string name="fixgiveup">放弃维修</string>
	<string name="takeit">取消报修/评价报修</string>
	<string name="cancellist">取消报修</string>
	<string name="cancelreason">取消原因:</string>
	<string name="comment">提交评论</string>
	<string name="commenttext">评论内容:</string>
	<string name="commentlevel">评价等级:</string>
	<string name="log">提交修机日志</string>
	<string name="giveup">放弃维修单</string>
	<string name="giveupreason">放弃原因：</string>
	<string name="logout">注销用户</string>
	
	<string name="img_description">图片</string>
	<string name="about_title">梦飞翔Android客户端</string>
	<string name="version">Version1.0</string>
	<string name="developers">开发人员：</string>
	
	<!-- String-array -->
	<string-array name="building_number">
	    <item >1</item>
	    <item >2</item>
	    <item >3</item>
	    <item >4</item>
	    <item >5</item>
	    <item >6</item>
	    <item >7</item>
	    <item >8</item>
	    <item >9</item>
	    <item >10</item>
	    <item >11</item>
	    <item >12</item>
	    <item >13</item>
	    <item >14</item>
	    <item >15</item>
	    <item >16</item>
	    <item >17</item>
	    <item >18</item>
	    <item >19</item>
	    <item >A</item>
	    <item >B</item>
	    <item >C</item>
	    <item >D</item>
	    <item >E</item>
	    <item >F</item>
	    <item >G</item>
	</string-array>
	
	<string-array name="area_name">
	    <item>北区</item>
	    <item>中区</item>
	    <item>南区</item>
	    <item>公寓</item>
	</string-array>
	
	<string-array name="compure_kind">
	    <item>笔记本</item>
	    <item>台式</item>
	    <item>苹果</item>
	</string-array>
</resources>