<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFFFFF" >

    <RelativeLayout
        android:id="@+id/layout_zhucedingbu"
        android:layout_width="fill_parent"
        android:layout_height="40dip"
        android:layout_alignParentTop="true"
        android:background="@drawable/pc_dingtiao" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/act_regist"
            android:textColor="#ffffff"
            android:textSize="20dip"
            android:textStyle="bold" />
    </RelativeLayout>

    <ScrollView
        android:id="@+id/layout_zcsl"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_zhucedingbu"
        android:layout_margin="5dip"
        android:paddingTop="10dip" >

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="1" >

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dip" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user"
                    android:textSize="15dip" />

                <EditText
                    android:id="@+id/et_zhuceyonghu"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/yuanjiao"
                    android:hint="@string/hint_user"
                    android:inputType="textVisiblePassword" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dip" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/password"
                    android:textSize="15dip" />

                <EditText
                    android:id="@+id/et_zhucemima"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/yuanjiao"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dip" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/realname"
                    android:textSize="15dip" />

                <EditText
                    android:id="@+id/et_zhucerealname"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/yuanjiao"
                    android:hint="@string/hint_realname" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dip" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sex"
                    android:textSize="15dip" />

                <EditText
                    android:id="@+id/et_zhucesex"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/yuanjiao"
                    android:hint="@string/hint_sex" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dip" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dorm"
                    android:textSize="15dip" />

                <EditText
                    android:id="@+id/et_zhucesushe"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/yuanjiao"
                    android:hint="@string/hint_dorm"
                    android:inputType="textVisiblePassword" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dip" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/area"
                    android:textSize="15dip" />

                <EditText
                    android:id="@+id/et_zhucearea"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/yuanjiao"
                    android:hint="@string/hint_area" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dip" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phone"
                    android:textSize="15dip" />

                <EditText
                    android:id="@+id/et_zhucedianhua"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/yuanjiao"
                    android:hint="@string/hint_phone"
                    android:inputType="phone" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dip" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:textSize="15dip" />

                <EditText
                    android:id="@+id/et_zhuceemail"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/yuanjiao"
                    android:hint="@string/hint_email"
                    android:inputType="textEmailAddress" />
            </TableRow>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dip"
                    android:background="@drawable/pc_dengluditiao" />

                <Button
                    android:id="@+id/btn_zhucetijiao"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/selector_btn"
                    android:gravity="center"
                    android:text="@string/btn_regist"
                    android:textSize="15dip" />
            </LinearLayout>
        </TableLayout>
    </ScrollView>

</RelativeLayout>