<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"  
    android:layout_width="fill_parent"  
    android:layout_height="fill_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    android:gravity="right">
        <TextView
        	android:layout_width="wrap_content"
            android:layout_height="40dip"
            android:text="@string/giveup"
           	android:textColor="#ffffff"
            android:textSize="20dip"
            android:gravity="center"
            android:textStyle="bold" 
            android:background="@drawable/pc_dingtiao"/>
     <LinearLayout 
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:paddingTop="2dip"
         android:gravity="top"
         android:paddingBottom="4dip">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/giveupreason"
             />
         <EditText 
             android:id="@+id/et_giveup"
             android:layout_width="fill_parent"
         	 android:layout_height="wrap_content"
         	 android:background="@drawable/yuanjiao"
         	 android:hint="@string/hint_giveup"/>
	</LinearLayout>
	
	<Button 
	    android:id="@+id/btn_giveup"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/giveup"
	    android:background="@drawable/selector_btn"/>
</LinearLayout>         